--- a/.rubocop_basic.yml
+++ b/.rubocop_basic.yml
@@ -30,6 +30,9 @@ Layout/TrailingBlankLines:
 Layout/TrailingWhitespace:
   Enabled: true
 
+Layout/LinesBetweenClassMembers:
+  Enabled: true
+
 Metrics/LineLength:
   Max: 100
 
